# plant-diseases-classifier

./: .gitignore  CLAUDE.md  LICENSE  README.md  classify.py  plot_history.py  pyproject.toml  train.py  web_app.py
output/: history.csv  history.json
plant_diseases/: __init__.py  config.py  data.py  device.py  history.py  model.py  plotting.py  trainer.py  transforms.py
templates/: index.html
tests/: test_web_app.py
