[project]
name = "plant-diseases"
version = "0.1.0"
description = "Plant disease classification using transfer learning"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
]

[tool.uv]
dev-dependencies = []
